# tele_cripto

./: .env.example  .gitignore  main.py  mock.py  pyproject.toml  session_mock.session-journal  session_name.session
classes/: __init__.py  brokerage.py  tele.py  telegram.py
trading/: __init__.py  bybit.py  gemini.py  telegram.py
