[project]
name = "tele-cripto"
version = "0.1.0"
description = ""
authors = [
    {name = "Devis",email = "davi.ribeirodosanjos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "telethon (>=1.40.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "ccxt (>=4.4.86,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
